update to angular 9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <mat-card>
       <mat-card-header>
           <mat-card-title>NGXS form sync with a store demo</mat-card-title>
-          <mat-card-subtitle><a href="https://ngxs.gitbook.io/ngxs/plugins/forms" target="_blank">https://ngxs.gitbook.io/ngxs/plugins/forms</a></mat-card-subtitle>
+          <mat-card-subtitle>
+          </mat-card-subtitle>
         <mat-panel-description>
 
         </mat-panel-description>
@@ -35,4 +36,8 @@
       </mat-action-row>
     </mat-card>
   </form>
+  <div style="text-align: center;padding-top: 10px;" >
+       <h3>Build with ❤️ by <a href="https://linkedin.com/in/kuncevic" target="_blank">Aliaksei Kuncevič</a> </h3>
+       <h3>Follow <a href="https://twitter.com/kuncevic" target="_blank">https://twitter.com/kuncevic</a> </h3>
+  </div>
 </div>
