--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,2 @@
-@import '~material-design-icons-iconfont/dist/material-design-icons.css';
+/* You can add global styles to this file, and also import other style files */
 @import './app/theme/default';
