--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,17 @@
 mat-form-field {
   width: 100%;
 }
+
+div.container {
+  width:800px; margin:0 auto;
+
+  .hello {
+    text-align: center;padding-top: 10px;
+  }
+}
+
+.mat-card-header {
+  justify-content: center ;
+
+}
+
